// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index type selector components renders type selector with default options 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="some_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="some_html_id"
        >
          Index type
        </label>
         
        <div
          class="euiText euiText--extraSmall"
        >
          <a
            class="euiLink euiLink--primary"
            href="https://github.com/opensearch-project/opensearch-spark/blob/main/docs/index.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Help
            <svg
              aria-hidden="true"
              aria-label="External link"
              class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
              />
            </svg>
            <span
              class="euiScreenReaderOnly"
            >
              (opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          aria-describedby="some_html_id-help-0"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="euiComboBox euiComboBox--compressed"
          role="combobox"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <div
                class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiComboBoxPill euiComboBoxPill--plainText"
                  value="skipping"
                >
                  Skipping Index
                </span>
                <div
                  class="euiComboBox__input"
                  style="font-size: 14px; display: inline-block;"
                >
                  <input
                    aria-controls=""
                    data-test-subj="comboBoxSearchInput"
                    id="some_html_id"
                    role="textbox"
                    style="box-sizing: content-box; width: 2px;"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                  data-test-subj="comboBoxToggleListButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="some_html_id-help-0"
        >
          Select the type of index you want to create. Each index type has benefits and costs.
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Index type selector components renders type selector with different options 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="some_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="some_html_id"
        >
          Index type
        </label>
         
        <div
          class="euiText euiText--extraSmall"
        >
          <a
            class="euiLink euiLink--primary"
            href="https://github.com/opensearch-project/opensearch-spark/blob/main/docs/index.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Help
            <svg
              aria-label="External link"
              class="euiIcon euiIcon--small euiLink__externalIcon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
              />
            </svg>
            <span
              class="euiScreenReaderOnly"
            >
              (opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          aria-describedby="some_html_id-help-0"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="euiComboBox euiComboBox--compressed"
          role="combobox"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <div
                class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiComboBoxPill euiComboBoxPill--plainText"
                  value="skipping"
                >
                  Skipping Index
                </span>
                <div
                  class="euiComboBox__input"
                  style="font-size: 14px; display: inline-block;"
                >
                  <input
                    aria-controls=""
                    data-test-subj="comboBoxSearchInput"
                    id="some_html_id"
                    role="textbox"
                    style="box-sizing: content-box; width: 2px;"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                  data-test-subj="comboBoxToggleListButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="some_html_id-help-0"
        >
          Select the type of index you want to create. Each index type has benefits and costs.
        </div>
      </div>
    </div>
  </div>
</body>
`;
